# doccer

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  pyproject.toml  setup.py
.githooks/: conventional-commit.sh
doccer/: __init__.py  project.py  types.py
doccer/templates/: README.rst.jinja2  conf.py.jinja2  subpage.rst.jinja2
