[project]
name = "doccer"
version = "0.1.0"
description = "Documentation generator and checker for Python projects."
authors = [
    {name = "Eric Burgess", email = "ericdb@gmail.com"},
]
dependencies = [
    "sphinx>=5.1.1",
    "sphinxcontrib-restbuilder>=0.3",
    "tomli>=2.0.1",
    "jinja2>=3.1.2",
]
requires-python = ">=3.8"
license = {text = "Proprietary"}

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool]
[tool.pdm]

[tool.magdocs]
